--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -28,6 +28,7 @@
       "nav_label": "Filters: "
     },
     "cart": {
+      "page_header": "Cart",
       "drawer_header": "Cart",
       "close_button": "Close",
       "update_button": "Update Cart",
@@ -36,7 +37,7 @@
       "summary_shipping": "Shipping",
       "calculated_at_checkout": "calculated at checkout",
       "checkout_button": "Checkout",
-      "empty_cart": "Your cart is empty. Check out these links to get started:"
+      "empty_cart": "Your cart is empty. Get started here:"
     },
     "breadcrumbs": {
       "home_link": "Home",
@@ -54,8 +55,8 @@
     "main": {
       "taxes_included": "Taxes included.",
       "calculated_at_checkout": "Shipping calculated at checkout.",
-      "variant_option_sold_out": "sold out",
-      "add_to_cart_button": "Add to cart",
+      "variant_option_sold_out": "Sold Out",
+      "add_to_cart_button": "Add To Cart",
       "out_of_stock_button": "Out Of Stock"
     },
     "back_in_stock": {
@@ -67,6 +68,22 @@
     },
     "recommendations": {
       "header": "You may also like"
+    }
+  },
+  "collection": {
+    "colour_filter": {
+      "drawer_header": "Browse By Colour",
+      "close_button": "Close",
+      "nav_label": "Browse by: ",
+      "nav_button": "Colour"
+    },
+    "product_filter": {
+      "drawer_header": "Product Filters",
+      "close_button": "Close",
+      "clear_button": "Clear all",
+      "apply_button": "Apply",
+      "nav_label": "Filters: ",
+      "nav_button": "Filter"
     }
   },
   "customer": {
